@@ -18,6 +18,8 @@ const STD_ITEM_PLAYLIST_TRACK = 8;
 const STD_ITEM_REMOTE_PLAYLIST_TRACK = 9;
 const STD_ITEM_MUSICIP_MOOD = 10;
 const STD_ITEM_WORK = 11;
+const STD_ITEM_WORK_COMPOSER = 12;
+const STD_ITEM_WORK_GENRE = 13;
 const STD_ITEM_MIX = 101;
 const STD_ITEM_MAI = 200;
 const STD_ITEM_ALL_TRACKS = 201;
@@ -85,6 +87,16 @@ const STD_ITEMS=[
         params: [ALBUM_TAGS_PLACEHOLDER, SORT_KEY+ALBUM_SORT_PLACEHOLDER],
         menu: [PLAY_ACTION, INSERT_ACTION, PLAY_SHUFFLE_ACTION, ADD_ACTION, ADD_RANDOM_ALBUM_ACTION, DIVIDER, ADD_TO_FAV_ACTION, SELECT_ACTION/*, CUSTOM_ACTIONS, MORE_LIB_ACTION*/],
         actionMenu: [DIVIDER, INSERT_ACTION, PLAY_SHUFFLE_ACTION, ADD_RANDOM_ALBUM_ACTION, DIVIDER, ADD_TO_FAV_ACTION/*, CUSTOM_ACTIONS, MORE_LIB_ACTION*/]
+    },
+    {
+        command: ["works"],
+        params: ['include_online_only_artists:1'],
+        menu: [ADD_TO_FAV_ACTION, CUSTOM_ACTIONS, MORE_LIB_ACTION]
+    },
+    {
+        command: ["works"],
+        params: ['include_online_only_artists:1'],
+        menu: [ADD_TO_FAV_ACTION, CUSTOM_ACTIONS, MORE_LIB_ACTION]
     }
 ];
 
